--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marvin Solano Eduarte",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-express": "^1.4.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-compile-handlebars": "^0.7.8",
+    "grunt-contrib-copy": "^0.8.2"
+  }
 }
