--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-express": "^1.4.1",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-compile-handlebars": "^0.7.8",
-    "grunt-contrib-copy": "^0.8.2"
+    "grunt-contrib-copy": "^0.8.2",
+    "handlebars": "^4.0.5"
   }
 }
